Add centered text input fields for session IDs

--- a/src/UI/src/App.css
+++ b/src/UI/src/App.css
@@ -114,3 +114,9 @@ strong {
   width: 600px;
   overflow: auto;
 }
+
+input[type="text"] {
+  text-align: center;
+  margin-left: 100px;
+  width: 200px;
+}
